# tensorrt-efficientnms-kpt

./: CMakeLists.txt  README.md  efficientNMSInference.cu  efficientNMSInference.h  efficientNMSParameters.h  efficientNMSPlugin.cpp
